--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -56,6 +56,9 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: dist
+          path: dist/
+      - name: Display Files
+        run: ls -R dist/
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@releases/v3
         with:
