--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -60,8 +60,7 @@ jobs:
       - name: Display Files
         run: ls -R dist/
       - name: Deploy 🚀
-        uses: JamesIves/github-pages-deploy-action@releases/v3
+        uses: JamesIves/github-pages-deploy-action@v4
         with:
-            BRANCH: deploy
-            FOLDER: dist
-            SINGLE_COMMIT: true
+            branch: deploy
+            folder: dist
